book draft in progress

--- a/_sources/000_1-sds-3-x/033_OBO_LoadExtract.ipynb
+++ b/_sources/000_1-sds-3-x/033_OBO_LoadExtract.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[ScaDaMaLe, Scalable Data Science and Distributed Machine Learning](https://lamastex.github.io/scalable-data-science/sds/3/x/)\n",
-    "==============================================================================================================================\n",
+    "ScaDaMaLe Course\n",
+    "[site](https://lamastex.github.io/scalable-data-science/sds/3/x/) and\n",
+    "[book](https://lamastex.github.io/ScaDaMaLe/index.html)\n",
     "\n",
     "Old Bailey Online Data Analysis in Apache Spark\n",
     "===============================================\n",
@@ -14,7 +15,7 @@
     "Commons Attribution-NonCommercial 4.0 International\n",
     "License](http://creativecommons.org/licenses/by-nc/4.0/).\n",
     "\n",
-    "#### Old Bailey, London's Central Criminal Court, 1674 to 1913\n",
+    "**Old Bailey, London's Central Criminal Court, 1674 to 1913**\n",
     "\n",
     "-   with Full XML Data for another great project. This is a starting\n",
     "    point for ETL of Old Bailey Online Data from\n",
