--- a/_sources/000_1-sds-3-x/035_LDA_CornellMovieDialogs.ipynb
+++ b/_sources/000_1-sds-3-x/035_LDA_CornellMovieDialogs.ipynb
@@ -4,13 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[ScaDaMaLe, Scalable Data Science and Distributed Machine Learning](https://lamastex.github.io/scalable-data-science/sds/3/x/)\n",
-    "==============================================================================================================================\n",
+    "ScaDaMaLe Course\n",
+    "[site](https://lamastex.github.io/scalable-data-science/sds/3/x/) and\n",
+    "[book](https://lamastex.github.io/ScaDaMaLe/index.html)\n",
     "\n",
     "Topic Modeling of Movie Dialogs with Latent Dirichlet Allocation\n",
     "================================================================\n",
     "\n",
-    "### Let us cluster the conversations from different movies!\n",
+    "**Let us cluster the conversations from different movies!**\n",
     "\n",
     "This notebook will provide a brief algorithm summary, links for further\n",
     "reading, and an example of how to use LDA for Topic Modeling.\n",
