--- a/_sources/000_1-sds-3-x/008_DiamondsPipeline_01ETLEDA.ipynb
+++ b/_sources/000_1-sds-3-x/008_DiamondsPipeline_01ETLEDA.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[ScaDaMaLe, Scalable Data Science and Distributed Machine Learning](https://lamastex.github.io/scalable-data-science/sds/3/x/)\n",
-    "==============================================================================================================================\n",
+    "ScaDaMaLe Course\n",
+    "[site](https://lamastex.github.io/scalable-data-science/sds/3/x/) and\n",
+    "[book](https://lamastex.github.io/ScaDaMaLe/index.html)\n",
     "\n",
     "### Diamonds ML Pipeline Workflow - DataFrame ETL and EDA Part\n",
     "\n",
