--- a/_sources/000_1-sds-3-x/033_OBO_PipedRDD_RigorousBayesianABTesting.ipynb
+++ b/_sources/000_1-sds-3-x/033_OBO_PipedRDD_RigorousBayesianABTesting.ipynb
@@ -4,11 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ScaDaMaLe Course\n",
+    "[site](https://lamastex.github.io/scalable-data-science/sds/3/x/) and\n",
+    "[book](https://lamastex.github.io/ScaDaMaLe/index.html)\n",
+    "\n",
+    "%md\n",
+    "\n",
     "Piped RDDs and Bayesian AB Testing\n",
     "==================================\n",
     "\n",
-    "Continued with Application to Old Bailey Online Data\n",
-    "----------------------------------------------------\n",
+    "**Continued with Application to Old Bailey Online Data**\n",
     "\n",
     "This is a recall/repeat of `006a_PipedRDD`. After the recall, we\n",
     "continue with applying Bayesian A/B Testing to the data extracted from\n",
