book draft in progress

--- a/_sources/000_7-sds-3-x-ddl/00_DDL_Introduction.ipynb
+++ b/_sources/000_7-sds-3-x-ddl/00_DDL_Introduction.ipynb
@@ -20,12 +20,15 @@
     "instructions to install and setup the right libraries and environments\n",
     "in databricks.\n",
     "\n",
-    "-   https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/horovod-runner.html\n",
-    "    -   make this a databricks notebook:\n",
-    "        https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/mnist-tensorflow-keras.html\n",
-    "    -   https://horovod.readthedocs.io/en/stable/keras.html\n",
-    "    -   https://arxiv.org/abs/1802.05799\n",
-    "    -   https://github.com/horovod/horovod"
+    "Please see the following for more details on how this module is brought\n",
+    "to you and to be able to take it further for your own goals:\n",
+    "\n",
+    "-   <https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/horovod-runner.html>\n",
+    "-   the originsl databricks notebooks are from:\n",
+    "    -   <https://docs.databricks.com/applications/machine-learning/train-model/distributed-training/mnist-tensorflow-keras.html>\n",
+    "-   <https://horovod.readthedocs.io/en/stable/keras.html>\n",
+    "-   <https://arxiv.org/abs/1802.05799>\n",
+    "-   <https://github.com/horovod/horovod>"
    ]
   }
  ],
