--- a/_sources/000_7-sds-3-x-ddl/0y_mnist-pytorch.ipynb
+++ b/_sources/000_7-sds-3-x-ddl/0y_mnist-pytorch.ipynb
@@ -20,8 +20,11 @@
     "and then shows how to adapt the code using HorovodRunner for distributed\n",
     "training.\n",
     "\n",
-    "**Requirements** \\* This notebook runs on CPU or GPU clusters. \\* To run\n",
-    "the notebook, create a cluster with - Two workers\n",
+    "**Requirements**\n",
+    "\n",
+    "-   This notebook runs on CPU or GPU clusters.\n",
+    "-   To run the notebook, create a cluster with\n",
+    "-   Two workers\n",
     "\n",
     "Cluster Specs on databricks\n",
     "---------------------------\n",
@@ -30,7 +33,13 @@
     "following runtime specifications with CPU/non-GPU and GPU clusters,\n",
     "respectively:\n",
     "\n",
-    "`* [x] Runs on 3 node non-GPU cluster with 7.4 ML     runtime (1+2 x m4.xlarge) * [x] Runs on 3 node     GPU cluster with 7.4 ML GPU runtime (1+2 x g4dn.xlarge)`\n",
+    "-   Runs on non-GPU cluster with 3 (or more) nodes on 7.4 ML runtime\n",
+    "    (nodes are 1+2 x m4.xlarge)\n",
+    "-   Runs on GPU cluster with 3 (or more) nodes on 7.4 ML GPU runtime\n",
+    "    (nodes are 1+2 x g4dn.xlarge)\n",
+    "\n",
+    "You do not need to \"install\" anything else in databricks as everything\n",
+    "needed is pre-installed in the runtime environment on the right nodes.\n",
     "\n",
     "Set up checkpoint location\n",
     "--------------------------\n",
